# worldmonitor

./: .dockerignore  .editorconfig  .env.docker.example  .env.example  .env.qadr.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  ARCHITECTURE-EXPLORATION.md  ARCHITECTURE.md  ARIA_INTEGRATION.md  ARIA_README.md  ARIA_SETUP.ts  AUDIT-MACRO-SYSTEM.md  CHANGELOG.md  CLAUDE.md  CODEBASE.md  CONTEXT.md  CONTRIBUTING.md  COUNTRY_PROFILE_FEATURE.md  DOCKER.md  Dockerfile  Dockerfile.api  Dockerfile.bun-server  Dockerfile.digest-notifications  Dockerfile.qadr-prebuilt  Dockerfile.relay  Dockerfile.seed-brief-composer  Dockerfile.seed-bundle-resilience-validation  HANDOFF.md  IRELAND_MONITOR_RSS_FIX.md  JARVIS_INTEGRATION_GUIDE.md  KAZAKHSTAN_SOURCES.md  LEGAL.md  Makefile  PLAN.md  PR_285_REVIEW.md  README.md  SECURITY.md  (+35 more)
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.gstack/: browse.json
.husky/: pre-commit  pre-push
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
api/: [[...path]].ts  _ai4u.js  _api-key.js  _api-key.test.mjs  _convex-error.js  _cors.js  _cors.test.mjs  _lkg.js  _llm-sanitize.d.ts  _llm-sanitize.js  _llm-sanitize.test.mjs  _oauth-token.js  _rate-limit.js  _rate-limit.test.mjs  _relay.js  _rss-allowed-domains.js  _sentry-common.js  _session.js  (+90 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: local-api-server.mjs  local-api-server.test.mjs  sidecar-smoke.test.mjs
src-tauri/src/: main.rs
(+3524 files in other folders)
